--- a/src/Tests/IndexIntegrityChecker/IndexIntegrityChecker.csproj
+++ b/src/Tests/IndexIntegrityChecker/IndexIntegrityChecker.csproj
@@ -8,9 +8,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.16" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="SenseNet.Security.EFCSecurityStore" Version="3.0.3" />
-    <PackageReference Include="SenseNet.Services.Core" Version="0.0.28" />
+    <PackageReference Include="SenseNet.Services.Core" Version="0.0.30.3" />
     <PackageReference Include="System.Data.SqlClient" Version="4.5.1" />
   </ItemGroup>
 
