--- a/src/Tests/SenseNet.Search.Lucene29.Tests/SenseNet.Search.Lucene29.Tests.csproj
+++ b/src/Tests/SenseNet.Search.Lucene29.Tests/SenseNet.Search.Lucene29.Tests.csproj
@@ -7,12 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="6.5.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.3" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.3" />
     <PackageReference Include="coverlet.collector" Version="3.0.2" />
-    <PackageReference Include="SenseNet.Services.Core" Version="0.0.30.3" />
-    <PackageReference Include="SenseNet.Tests.Core" Version="1.1.5.2" />
+    <PackageReference Include="SenseNet.Services.Core" Version="0.0.30.4" />
+    <PackageReference Include="SenseNet.Tests.Core" Version="1.1.5.3" />
   </ItemGroup>
 
   <ItemGroup>
