--- a/src/SenseNet.Search.Lucene29/SenseNet.Search.Lucene29.csproj
+++ b/src/SenseNet.Search.Lucene29/SenseNet.Search.Lucene29.csproj
@@ -29,4 +29,8 @@
     <PackageReference Include="SenseNet.Search.Lucene29.Lucene.Net" Version="2.9.4.301" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Contrib.Regex\Contrib.Regex.csproj" />
+  </ItemGroup>
+
 </Project>
