--- a/src/Tests/SenseNet.Search.Lucene29.Tests/SenseNet.Search.Lucene29.Tests.csproj
+++ b/src/Tests/SenseNet.Search.Lucene29.Tests/SenseNet.Search.Lucene29.Tests.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Contrib.Regex\Contrib.Regex.csproj" />
     <ProjectReference Include="..\..\SenseNet.Search.Lucene29.Centralized.Index\SenseNet.Search.Lucene29.Centralized.Index.csproj" />
     <ProjectReference Include="..\..\SenseNet.Search.Lucene29.Common\SenseNet.Search.Lucene29.Common.csproj" />
     <ProjectReference Include="..\..\SenseNet.Search.Lucene29.Local\SenseNet.Search.Lucene29.Local.csproj" />
