--- a/src/SenseNet.Search.Lucene29.Centralized.GrpcService/SenseNet.Search.Lucene29.Centralized.GrpcService.csproj
+++ b/src/SenseNet.Search.Lucene29.Centralized.GrpcService/SenseNet.Search.Lucene29.Centralized.GrpcService.csproj
@@ -5,6 +5,8 @@
     <UserSecretsId>d87b24d7-ed3a-48ac-9f93-0adbf878a1e4</UserSecretsId>
     <Version>1.0.2</Version>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+	<DockerfileContext>..</DockerfileContext>
+	<DockerfileRunArguments>--network sensenet --name SnSearchService</DockerfileRunArguments>
   </PropertyGroup>
 
   <ItemGroup>
