--- a/src/Tests/CentralizedIndexBackupTester/CentralizedIndexBackupTester.csproj
+++ b/src/Tests/CentralizedIndexBackupTester/CentralizedIndexBackupTester.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <UserSecretsId>c17001ae-67d8-4128-afe5-38f10ece450d</UserSecretsId>
   </PropertyGroup>
 
@@ -14,10 +14,10 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="SenseNet.ContentRepository.MsSql" Version="0.0.3" />
-    <PackageReference Include="SenseNet.Security.EFCSecurityStore" Version="3.0.3.2" />
-    <PackageReference Include="SenseNet.Security.Messaging.RabbitMQ" Version="1.2.1.1" />
-    <PackageReference Include="SenseNet.Services.Core" Version="0.0.32.3" />
+    <PackageReference Include="SenseNet.ContentRepository.MsSql" Version="0.0.3.1" />
+    <PackageReference Include="SenseNet.Security.EFCSecurityStore" Version="3.0.3.3" />
+    <PackageReference Include="SenseNet.Security.Messaging.RabbitMQ" Version="1.2.1.2" />
+    <PackageReference Include="SenseNet.Services.Core" Version="0.0.32.5" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
     <PackageReference Include="System.ServiceModel.NetTcp" Version="4.10.0" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="3.1.0" />
