--- a/src/Tests/IndexIntegrityChecker/IndexIntegrityChecker.csproj
+++ b/src/Tests/IndexIntegrityChecker/IndexIntegrityChecker.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <UserSecretsId>34862dc8-9cf2-4ebd-a4d5-b9f5737033e3</UserSecretsId>
   </PropertyGroup>
 
@@ -13,9 +13,9 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="SenseNet.ContentRepository.MsSql" Version="0.0.3" />
-    <PackageReference Include="SenseNet.Security.EFCSecurityStore" Version="3.0.3.2" />
-    <PackageReference Include="SenseNet.Services.Core" Version="0.0.32.3" />
+    <PackageReference Include="SenseNet.ContentRepository.MsSql" Version="0.0.3.1" />
+    <PackageReference Include="SenseNet.Security.EFCSecurityStore" Version="3.0.3.3" />
+    <PackageReference Include="SenseNet.Services.Core" Version="0.0.32.5" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="3.1.0" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="3.4.0" />
