--- a/src/Tests/SenseNet.Search.Lucene29.Tests/SenseNet.Search.Lucene29.Tests.csproj
+++ b/src/Tests/SenseNet.Search.Lucene29.Tests/SenseNet.Search.Lucene29.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
@@ -12,8 +12,8 @@
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
     <PackageReference Include="coverlet.collector" Version="3.0.2" />
-    <PackageReference Include="SenseNet.Services.Core" Version="0.0.32.3" />
-    <PackageReference Include="SenseNet.Tests.Core" Version="1.1.7.1" />
+    <PackageReference Include="SenseNet.Services.Core" Version="0.0.32.5" />
+    <PackageReference Include="SenseNet.Tests.Core" Version="1.1.7.3" />
   </ItemGroup>
 
   <ItemGroup>
